--- a/WorkingII/index.html
+++ b/WorkingII/index.html
@@ -17,10 +17,10 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <body link="white">
-        <li class="active"><a href="../1.home/index.html">Home <span class="sr-only">(current)</span></a></li>
-        <li><a href="../2.about/about.html">About</a></li>
-        <li><a href="../3.menu/menu.html">Menu</a></li>
-        <li><a href="../4.contact/contact.html">Contact</a></li>
+        <li class="active"><a href="index.html">Home <span class="sr-only">(current)</span></a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="menu.html">Menu</a></li>
+        <li><a href="contact.html">Contact</a></li>
         </body>
         
         <img class="Logo" src="img/Logo.png" alt="" title="widthbox" width="200" height="90">
