--- a/WorkingII/contact.html
+++ b/WorkingII/contact.html
@@ -109,6 +109,8 @@
             <div class="row">
 
                 <form action="https://formspree.io/jake.duda312@gmail.com" method="POST">
+                <input type="hidden" name="_subject" value="Sale" />
+                <input type="hidden" name="_next" value="http://jduda2.github.io/My-Simple-Site/WorkingII/" />
                     <div class="form-group">
                         <label for="email">Email: </label>
                         <input type="text" class="form-control" name="email" placeholder="Email">
