--- a/WorkingII/Thanks.html
+++ b/WorkingII/Thanks.html
@@ -20,35 +20,11 @@
 </script>
 </head>
 
-<nav class="navbar navbar-default navbar-fixed-top">
-    <div class="container">
-
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-
-                <body link="white">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li class="active"><a href="menu.html">Menu <span class="sr-only">(current)</span></a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </body>
-
-                <img class="Logo" src="img/Logo.png" alt="" title="widthbox" width="200" height="90">
-
-            </ul>
-
-        </div>
-    </div>
-    </div>
-</nav>
-
 <body>
 
     <div class="container">
 
-       <h1>Thanks for shopping here</h1>
+       <h1 class="thanksTXT">Thanks for shopping here</h1>
 
         <div class="rectTop" style="width:1296px;height:25px;border:0px solid #000;">
         </div>
