--- a/WorkingII/Thanks.html
+++ b/WorkingII/Thanks.html
@@ -19,6 +19,29 @@
 
 </script>
 </head>
+<nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container">
+
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+
+                <body link="white">
+                    <li><a href="index.html">Home <span class="sr-only">(current)</span></a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="menu.html">Menu</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </body>
+
+                <img class="Logo" src="img/Logo.png" alt="" title="widthbox" width="200" height="90">
+
+            </ul>
+
+        </div>
+    </div>
+    </div>
+</nav>
 
 <body>
 
