--- a/WorkingII/Thanks.html
+++ b/WorkingII/Thanks.html
@@ -28,7 +28,7 @@
             <ul class="nav navbar-nav">
 
                 <body link="white">
-                    <li><a href="index.html">Home <span class="sr-only">(current)</span></a></li>
+                    <li class="active"><a href="index.html">Home <span class="sr-only">(current)</span></a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="menu.html">Menu</a></li>
                     <li><a href="contact.html">Contact</a></li>
